# git-bootstrap

./: README.md  install.sh  pyproject.toml
git_bootstrap/: cli.py
